--- a/Code/server/web-client/public/stylesheets/style.css
+++ b/Code/server/web-client/public/stylesheets/style.css
@@ -1,8 +1,91 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin-left:0;
+  margin-right:0;
+  margin-top:0;
+  margin-bottom:0;
+  font-family: 'Courier New', Courier, monospace;
+  background-image: url(../images/farming-ih9i1n9y7ibamzi1.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size:cover;
 }
 
 a {
-  color: #00B7FF;
+  color: white;
+  text-decoration:none;
+}
+
+#upper-bar{
+  display: flex;
+  justify-content: space-around;
+  width:100%;
+  height:80px;
+  top:10%;
+  background-color:gray;
+  opacity: 0.7;
+  font-size: 170%;
+  float:right;
+}
+
+#one{
+  color:white;
+  text-align: center;
+  width:30%;
+  padding-top:1.5%;
+  height:auto;
+  float:left;
+}
+
+#two{
+  color:white;
+  text-align: center;
+  width:30%;
+  padding-top:1.5%;
+  height:auto;
+  float:left;
+}
+#three{
+  color:white;
+  text-align: center;
+  width:30%;
+  padding-top:1.5%;
+  height:auto;
+  float:left;
+}
+
+#text-part{
+  width:100%;
+  height:300px;
+  padding-top: 2%;
+  padding-left: 1%;
+  background-color:gray;
+  opacity: 0.9;
+  font-size: 100%;
+}
+
+.background{
+  display: flex;
+  background-color:#ededdf;
+  justify-content:baseline;
+  padding-top: 150px;
+  height: 700px;
+}
+@media(max-width:768px){
+  .background{
+      height: 1000px;
+  }
+} 
+
+.button {
+  background-color: bisque;
+  border: none;
+  color: black;
+  padding: 10px 15px;
+  text-align: right;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  border-radius: 12px;
 }
