--- a/Code/server/web-client/views/news.ejs
+++ b/Code/server/web-client/views/news.ejs
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>News</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <h1><%= title %></h1>
 
-    <a href="/">Shed</a>
-    <a href="/news">News</a>
-
-    <b>News:</b>
-
-    <div>
-        <%= category %>
-        <%= news %>
+    <div id="upper-bar">
+      <div class="link-dark" id="one"><a href="/">Shed</a></div>
+      <div class="link-dark" id="two"><a href="/news">News</a></div>
+      <div class="link-dark" id="three"><a href="/location">Location</a></div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1>News</h1>
+    <br>
+    <br>
+    <div id="text-part">
+         <%= category %>
+         <%= url%>
     </div>
        
   </body>
