--- a/Code/server/web-client/views/location.ejs
+++ b/Code/server/web-client/views/location.ejs
@@ -9,9 +9,10 @@
   </head>
   <body>
     <div id="upper-bar">
-      <div class="link" id="one"><a href="/">Shed</a></div>
-      <div class="link" id="two"><a href="/news">News</a></div>
-      <div class="link" id="three"><a href="/location">Location</a></div>
+      <div class="link" id="one"><a href="/">Cattle</a></div>
+      <div class="link" id="two"><a href="/shed">Shed</a></div>
+      <div class="link" id="three"><a href="/location">Grazing</a></div>
+      <div class="link" id="four"><a href="/news">News</a></div>
     </div>
     <br>
     <br>
