--- a/Code/server/web-client/views/shed.ejs
+++ b/Code/server/web-client/views/shed.ejs
@@ -3,31 +3,57 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     
     <div id="upper-bar">
-        <div class="link" id="one"><a href="/">Main</a></div>
-        <div class="link" id="two"><a href="/shed">Shed</a></div>
-        <div class="link" id="three"><a href="/news">News</a></div>
-        <div class="link" id="four"><a href="/location">Location</a></div>
-      </div>
-    
+      <div class="link" id="one"><a href="/">Cattle</a></div>
+      <div class="link" id="two"><a href="/shed">Shed</a></div>
+      <div class="link" id="three"><a href="/location">Grazing</a></div>
+      <div class="link" id="four"><a href="/news">News</a></div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <h1><%= title %></h1>
-
-    <% if(error) { %>
-      <%= error %>
-    <% } %>
-
-    <form action="/shed" method="get">
-      <button type="submit">Submit!</button>
-    </form>
-
-    <!-- Ideally the alertMessage should show here after get is called when clicking on above button -->
-    <b>Actions taken:</b>
-    <%= alertMessage %>
-    
-  
-    
+    <br>
+    <br>
+    <div id="text-part">
+      <p>Real time data is sent from various sensors installed within the cattle shed at regular intervals. Measurements are taken 5 times a day and responsive actions are automatically implemented daily to ensure that shed conditions remain at peek.</p>
+      <p>To check what actions have been triggered, please click the button below</p>
+      <% if(error) { %>
+        <%= error %>
+      <% } %>
+      <br>
+      <br>
+      <br>
+      <div>
+        <form action="/shed" method="get">
+          <button class="button" type="submit">Check daily actions</button>
+        </form>
+      </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div id="text-part">
+      <b>Actions taken:</b>
+      <%= alertMessage %>
+    </div> 
   </body>
 </html>
+
+
