--- a/Code/server/web-client/public/stylesheets/style.css
+++ b/Code/server/web-client/public/stylesheets/style.css
@@ -70,7 +70,7 @@ td {
 
 #text-part{
   width:100%;
-  height:300px;
+  height:350px;
   padding-top: 2%;
   padding-left: 1%;
   background-color:gray;
@@ -78,17 +78,8 @@ td {
   font-size: 100%;
 }
 
-.background{
-  display: flex;
-  background-color:#ededdf;
-  justify-content:baseline;
-  padding-top: 150px;
-  height: 700px;
-}
-@media(max-width:768px){
-  .background{
-      height: 1000px;
-  }
+#hidden {
+  display: none;
 } 
 
 .button {
