--- a/Code/server/web-client/views/shed.ejs
+++ b/Code/server/web-client/views/shed.ejs
@@ -33,7 +33,7 @@
     <br>
     <div id="text-part">
       <p>Real time data is sent from various sensors installed within the cattle shed at regular intervals. Measurements are taken 5 times a day and responsive actions are automatically implemented daily to ensure that shed conditions remain at peek.</p>
-      <p>To check what actions have been triggered, please click the button below</p>
+      <p>To see a daily summary of measurements and complementary actions taken, please click on the button below</p>
       <% if(error) { %>
         <%= error %>
       <% } %>
@@ -41,17 +41,30 @@
       <br>
       <br>
       <div>
-        <form action="/shed" method="get">
-          <button class="button" type="submit">Check daily actions</button>
+        <form action="/shed" method="get" >
+          <input class="button" type="button" value="Daily Summary" onclick="document.getElementById('hidden').style.display = 'block' ;"/>
         </form>
       </div>
     </div>
     <br>
     <br>
     <br>
-    <div id="text-part">
-      <b>Actions taken:</b>
-      <%= alertMessage %>
+    <div id="hidden">
+      <div id="text-part">
+        <b>Average Measurements of Today:</b>
+        <br>
+        <ul>
+          <li>Average Temperature: <%= avgTemperature %></li>
+          <li>Average Humidity: <%= avgHumidity %></li>
+          <li>Average Water Quality (pH): <%= avgWaterQuality %></li>
+          <li>Average Water Quantity (in l): <%= avgWaterQuantity %></li>
+          <li>Average Ammonia Level (in ppm): <%= avgAmmoniaLv %></li>
+        </ul>
+        <br>
+        <br>
+        <b>Automatic Actions Taken Today:</b>
+        <%= alertMessage %>
+      </div>
     </div> 
   </body>
 </html>
