--- a/Code/server/web-client/public/stylesheets/style.css
+++ b/Code/server/web-client/public/stylesheets/style.css
@@ -94,3 +94,18 @@ td {
   border-radius: 12px;
 }
 
+.chartLeft {
+  width:100%;
+  max-width:700px;
+  background-color:gray;
+  float:left;
+  margin-top: 5px;
+}
+
+.chartRight {
+  width:100%;
+  max-width:700px;
+  background-color:gray;
+  float:right;
+  margin-top: 5px;
+}
