--- a/Code/server/web-client/views/location.ejs
+++ b/Code/server/web-client/views/location.ejs
@@ -11,7 +11,7 @@
     <div id="upper-bar">
       <div class="link" id="one"><a href="/">Cattle</a></div>
       <div class="link" id="two"><a href="/shed">Shed</a></div>
-      <div class="link" id="three"><a href="/location">Grazing</a></div>
+      <div class="link" id="three"><a href="/grazing">Grazing</a></div>
       <div class="link" id="four"><a href="/news">News</a></div>
     </div>
     <br>
