--- a/Code/server/web-client/views/grazinglocation.ejs
+++ b/Code/server/web-client/views/grazinglocation.ejs
@@ -46,19 +46,7 @@
     <br>
     <div id="text-part">
       <b>Location Tracking:</b>
-      <div id="grazinglocation"></div>
-      <script src="/socket.io/socket.io.js"></script>
-      <script>
-        const socket = io();
-
-        socket.on('location-update', function(data) {
-          document.getElementById('location').innerHTML = data.message + ' at location ' + data.location;
-        });
-
-        socket.on('disconnect', function() {
-          console.log('Disconnected from server');
-        });
-      </script>
+      <%= message %>
     </div>
   </body>
 </html>
