replacing NewsAndStatisticsService with DiaryMonitoring for relevance

--- a/Code/server/web-client/views/grazing.ejs
+++ b/Code/server/web-client/views/grazing.ejs
@@ -13,7 +13,7 @@
       <div class="link" id="one"><a href="/">Cattle</a></div>
       <div class="link" id="two"><a href="/shed">Shed</a></div>
       <div class="link" id="three"><a href="/grazing">Grazing</a></div>
-      <div class="link" id="four"><a href="/news">News</a></div>
+      <div class="link" id="four"><a href="/milk">Diary Output</a></div>
     </div>
     <br>
     <br>
@@ -63,6 +63,7 @@
           <li>Locations safe to visit for the next grazing period: <%= safeLocations %></li>
         <% } %>
         </ul>
+        <img src="Code/server/web-client/public/images/Screenshot 2023-12-30 at 21.52.19.png" alt="map">
       </div>
     </div>
   </body>
