--- a/Code/server/web-client/views/grazinglocation.ejs
+++ b/Code/server/web-client/views/grazinglocation.ejs
@@ -12,7 +12,7 @@
       <div class="link" id="one"><a href="/">Cattle</a></div>
       <div class="link" id="two"><a href="/shed">Shed</a></div>
       <div class="link" id="three"><a href="/grazing">Grazing</a></div>
-      <div class="link" id="four"><a href="/news">News</a></div>
+      <div class="link" id="four"><a href="/milk">Diary Output</a></div>
     </div>
     <br>
     <br>
