--- a/Code/server/web-client/views/milkoutput.ejs
+++ b/Code/server/web-client/views/milkoutput.ejs
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>News</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    
+
     <div id="upper-bar">
       <div class="link" id="one"><a href="/">Cattle</a></div>
       <div class="link" id="two"><a href="/shed">Shed</a></div>
@@ -23,62 +24,35 @@
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h1><%= title %></h1>
+    <h1>Daily Diary Data</h1>
     <br>
     <br>
     <div id="text-part">
       <p>Real time data is sent from various sensors installed within the cattle shed at regular intervals. Measurements are taken 5 times a day and responsive actions are automatically implemented daily to ensure that shed conditions remain at peek.</p>
-      <p>To see a daily summary of measurements and complementary actions taken, please click on the button below</p>
       <% if(error) { %>
         <%= error %>
       <% } %>
+      <b>Average Measurements of Today:</b>
       <br>
-      <br>
-      <br>
-      <div>
-        <div>
-          <form action="/shed" method="get">
-            <input class="button" type="button" value="Get Air & Water Conditions" onclick="document.getElementById('hidden').style.display = 'block' ;"/>
-          </form>
-        </div>
+      <ul>
+        <li><b>Output</b></li>
+        <li>Total Milk Output: <%= totalMilkOutput %></li>
+        <li>Total Cattle Weight: <%= totalCattleWeight %></li>
         <br>
-      </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <div id="hidden">
-        <div id="text-part">
-          <b>Average Measurements of Today:</b>
-          <br>
-          <br>
-          <ul>
-            <li><b>Air Conditions</b></li>
-            <li>Average Temperature: <%= avgTemperature %></li>
-            <li>Average Humidity: <%= avgHumidity %></li>
-            <li>Average Ammonia Level (in ppm): <%= avgAmmoniaLv %></li>
-            <br>
-            <li><b>Water Conditions</b></li>
-            <li>Average Water Quality (pH): <%= avgWaterQuality %></li>
-            <li>Average Water Quantity (in l): <%= avgWaterQuantity %></li>
-          </ul>
-          <br>
-          <b>Automatic Actions Taken Today:</b>
-          <%= airAlertMessage %>
-          <%= waterAlertMessage %>
-        </div>
-      </div> 
+        <li><b>Problems</b></li>
+        <li>Animals with below average milk output:
+          <% for(var i = 0; i < problematicMilkOutput.length; i++) { %>
+            <%= JSON.stringify(problematicMilkOutput[i]) %>
+          <% } %></li>
+        <li>Animals with below average or above average weight: 
+          <% for(var i = 0; i < problematicCattleWeight.length; i++) { %>
+            <%= JSON.stringify(problematicCattleWeight[i]) %>
+          <% } %>
+        </li>
+      </ul>
+    </div>
     <br>
     <br>
     <br>
-    </div> 
   </body>
 </html>
-
-
