--- a/Code/server/web-client/views/milk.ejs
+++ b/Code/server/web-client/views/milk.ejs
@@ -28,13 +28,13 @@
     <br>
     <br>
     <div id="text-part">
-      <p>At times cattle needs to be excluded from the daily milking cycle.</p>
-      <p>Please put in the Tag-ID of the animal excluded in tomorrow's milk cycle (the animal will be removed automatically after 24 hours):</p>
+      <p>At times cattle needs to be excluded from the daily production cycle.</p>
+      <p>Please put in the Tag-ID of the animal excluded in tomorrow's milking cycle (the animal will be removed from the exemption list automatically after 24 hours):</p>
       <div>
         <form action="/milk" method="get">
           <label for="exclude">Exclude</label>
           <input type="number" name="exclude">
-          <button class="button" type="submit">Exclude from Milk Cycle</button>
+          <button class="button" type="submit">Exclude</button>
         </form>
       </div>
       <br>
