--- a/Code/server/web-client/views/milkoutput.ejs
+++ b/Code/server/web-client/views/milkoutput.ejs
@@ -28,7 +28,7 @@
     <br>
     <br>
     <div id="text-part">
-      <p>Real time data is sent from various sensors installed within the cattle shed at regular intervals. Measurements are taken 5 times a day and responsive actions are automatically implemented daily to ensure that shed conditions remain at peek.</p>
+      <p>Real time data is sent from sensors at the production plant to measure each animal's milk output and weight. Please fine the daily output data below as well as the Tag-ID of animals that did not perform based on set standards.</p>
       <% if(error) { %>
         <%= error %>
       <% } %>
